renew scss file

--- a/static/src/scss/_variables.scss
+++ b/static/src/scss/_variables.scss
@@ -5,9 +5,10 @@
 $orange: #f4623a;
 $brown: #5c4d42;
 $roct_red:#ff0000;
+$roct_grey:#818181;
 
 //- Override primary color
-$primary: $orange;
+$primary: $roct_grey;
 
 //- Override font system
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
