--- a/static/src/scss/_masthead.scss
+++ b/static/src/scss/_masthead.scss
@@ -5,12 +5,12 @@ header.masthead {
     padding-bottom: calc(10rem - #{$navbar-height});
     // replace the masthead.jpg image in the /assets/img directory to change the image
     // if the image name change, make sure to update the url path below!
-    background: linear-gradient(
-            to bottom,
-            #{fade-out($brown, 0.2)} 0%,
-            #{fade-out($brown, 0.2)} 100%
-        ),
-        url("../assets/img/bg-masthead.jpg");
+    //background: linear-gradient(
+    //        to bottom,
+    //        #{fade-out($brown, 0.2)} 0%,
+    //        #{fade-out($brown, 0.2)} 100%
+    //    ),
+    //    url("../assets/img/bg-masthead.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -35,4 +35,8 @@ header.masthead {
             font-size: 3.5rem;
         }
     }
+}
+
+.div-agenda {
+    height: 80vh;
 }
