--- a/static/src/scss/_variables.scss
+++ b/static/src/scss/_variables.scss
@@ -6,6 +6,7 @@ $orange: #f4623a;
 $brown: #5c4d42;
 $roct_red:#ff0000;
 $roct_grey:#818181;
+$white: white;
 
 //- Override primary color
 $primary: $roct_grey;
