--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -7,7 +7,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-12 align-self-end">
-                    <h1 class="text-uppercase text-red-75 font-weight-bold">Ton agenda</h1>
+                    <h1 class="text-uppercase text-red-75 font-weight-bold">Prochaines scéances</h1>
                 </div>
                 <div class="col-lg-12 align-self-baseline border-red div-agenda">
                     
