--- a/static/src/scss/_navbar.scss
+++ b/static/src/scss/_navbar.scss
@@ -11,7 +11,7 @@
     .navbar-nav {
         .nav-item {
             .nav-link {
-                color: $roct_red;
+                color: $white;
                 font-family: $font-family-sans-serif;
                 font-weight: $font-weight-bold;
                 font-size: 0.9rem;
