--- a/pages/templates/pages/mentions.html
+++ b/pages/templates/pages/mentions.html
@@ -8,7 +8,7 @@
     <div class="container h-100 mt-4">
         <div class="row h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-8 align-self-baseline">
-                <h2 class="text-white-75 font-weight-light mb-5" id="punch-line">Mentions légales</h2>
+                <h2 class="text-white-75 font-weight-light mb-5" id="title-mentions" >Mentions légales</h2>
             </div>
             <div class="col-lg-8 align-self-baseline">
                 <p id="mentions-parag" class="text-muted-homemade mb-5">
