--- a/static/src/scss/_utilities.scss
+++ b/static/src/scss/_utilities.scss
@@ -10,5 +10,9 @@
 
 
 .border-red {
-    border: solid 0.3em fade-out($roct_red, 0.3);;
+    border: solid 0.3em fade-out($roct_red, 0.3);
+}
+
+.bg-roct-red {
+    background-color: $roct_red;
 }
