--- a/pages/templates/pages/mentions.html
+++ b/pages/templates/pages/mentions.html
@@ -3,15 +3,15 @@
 
 
 <!-- Masthead-->
-{% block content %}
+{% block masthead %}
 <header class="masthead" style="background-image:None ;">
     <div class="container h-100 mt-4">
         <div class="row h-100 align-items-center justify-content-center text-center">
-            <div class="col-lg-8 align-self-baseline">
+            <div class="col-lg-12 align-self-baseline">
                 <h2 class="text-white-75 font-weight-light mb-5" id="title-mentions" >Mentions légales</h2>
             </div>
-            <div class="col-lg-8 align-self-baseline">
-                <p id="mentions-parag" class="text-muted-homemade mb-5">
+            <div class="col-lg-12 align-self-baseline">
+                <p id="mentions-parag" class=" mb-5">
                     The MIT License (MIT)
 
 Copyright (c) 2013-2020 Blackrock Digital LLC
@@ -40,4 +40,4 @@ THE SOFTWARE.
     </div>
 </header>
 
-{% endblock content %}
+{% endblock masthead %}
