--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         {% block nav%}
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">
                     <img 
                             src="{% static 'dist/assets/img/logo/logo.svg' %}"  width="60" height="60" class="d-inline-block align-top"
                             alt="Image"
