--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,10 +6,30 @@
 
 {% block masthead %}
     <header class="masthead">
-        <div class="container h-100">
-            <div class="row h-100 pt-5">
-                <div id="register-main-frame"  class="col-lg-12 align-self-baseline border-red div-agenda pt-2">
-                    <h1> {{ user.username  }}   </h1>
+        <div class="container h-100 ">
+            <div class="row h-100 pt-5 border-red div-agenda">
+                <div id="profile-main-frame"  class="col-sm-12 row align-self-baseline  pt-2">
+                    <div class="col-sm-12 col-lg-4 div-profile-pic">
+                        <img class="rounded-circle img-profile-pic" src="{{user.profile.image.url}}" alt="">
+                    </div>
+                    <div class="col-sm-12 col-lg-8 text-red-75">
+                        <h1>{{ user.username}}</h1>
+                    </div>    
+                </div>
+                <div id="profile-information"  class="col-sm-12 offset-sm-2 row align-self-baseline pt-2">
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <fieldset class="form-group text-red-75">
+                            <legend class="border-bottom mb-4 text-muted-homemade">Mettre à jour</legend>
+                            {{ u_form|crispy }}
+                            {{ p_form|crispy }}
+
+                        </fieldset>
+                        <div class="form-group">
+                            <button id="btn-register" class="btn btn-outline-info btn-formular bg-roct-red text-white-75 border-red" type="submit">Enregistrer</button>
+                        </div>
+                    </form>   
+                    
                 </div>
             </div>
         </div>
