Adding rich text editor + upload from the same

--- a/static/src/scss/styles.scss
+++ b/static/src/scss/styles.scss
@@ -13,5 +13,6 @@
 // Import custom utilities
 @import "./utilities.scss";
 @import "./users.scss";
+@import "./training.scss";
 
 // Import custom login
