--- a/templates/base.html
+++ b/templates/base.html
@@ -1,75 +1,84 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="fr">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>{% block title %}
-             {% endblock title %}
-        </title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'dist/assets/img/favicon.ico' %}" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
-        <!-- Third party plugin CSS-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{% static 'dist/css/styles.css' %}" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        {% block nav %}
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">
-                    <img 
-                            src="{% static 'dist/assets/img/logo/logo.svg' %}"  width="60" height="60" class="d-inline-block align-top"
-                            alt="Image"
-                            id="logo" />
-                </a>
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Ateliers</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Scéance</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Plannifier</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Effectifs</a></li>
-                        <li id="profile-link"class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'profile' %}">Profile</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Deconnecter</a></li>
-                        {% else %}
-                        <li id="register-link" class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'register' %}">Enregister</a></li>
-                        <li id="login-link" class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'login' %}">Connecter</a></li>
-                        {% endif %}
-                    </ul>
-                </div>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>{% block title %}
+        {% endblock title %}
+    </title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="{% static 'dist/assets/img/favicon.ico' %}" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+        rel="stylesheet" type="text/css" />
+    <!-- Third party plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{% static 'dist/css/styles.css' %}" rel="stylesheet" />
+</head>
+
+<body id="page-top">
+    <!-- Navigation-->
+    {% block nav %}
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="{% url 'home' %}">
+                <img src="{% static 'dist/assets/img/logo/logo.svg' %}" width="60" height="60"
+                    class="d-inline-block align-top" alt="Image" id="logo" />
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Ateliers</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Scéance</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Plannifier</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Effectifs</a></li>
+                    <li id="profile-link" class="nav-item"><a class="nav-link js-scroll-trigger"
+                            href="{% url 'profile' %}">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'logout' %}">Deconnecter</a>
+                    </li>
+                    {% else %}
+                    <li id="register-link" class="nav-item"><a class="nav-link js-scroll-trigger"
+                            href="{% url 'register' %}">Enregister</a></li>
+                    <li id="login-link" class="nav-item"><a class="nav-link js-scroll-trigger"
+                            href="{% url 'login' %}">Connecter</a></li>
+                    {% endif %}
+                </ul>
             </div>
+        </div>
+    </nav>
+    {%endblock nav%}
+    <!-- Masthead-->
+    {% block masthead %}
+    {% endblock masthead %}
+    <!-- Footer-->
+    {%block footer %}
+    <footer class="page-footer">
+        <nav class="navbar fixed-bottom navbar-light bg-light">
+            <a class="navbar-brand" href="{% url 'mentions' %}">Mentions légales</a>
+            <a class="navbar-brand" href="https://www.rugby-tourcoing.com/">Site officiel</a>
         </nav>
-        {%endblock nav%}  
-        <!-- Masthead-->
-        {% block masthead %}
-        {% endblock masthead %}     
-        <!-- Footer-->
-        {%block footer %}
-        <footer class="bg-roct-red py-5">
-            <div class="container row col-sm-12 offset-sm-1">
-                <div class="col-sm-4 offset-sm-2"><a class="nav-link text-white" href="{% url 'mentions' %}" id="legal-link">Mentions légales</a></div>
-                <div class="col-sm-4"><a class="nav-link text-white" href="https://www.rugby-tourcoing.com/" id="official-link">Site officiel du ROCT</a></div>
-            </div>
-        </footer>
-        {% endblock footer %}
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="{% static 'dist/js/scripts.js' %}"></script>
-    </body>
+    </footer>
+    {% endblock footer %}
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="{% static 'dist/js/scripts.js' %}"></script>
+</body>
+
 </html>
