--- a/training/templates/training/practice_detail.html
+++ b/training/templates/training/practice_detail.html
@@ -6,20 +6,18 @@
 {% block masthead %}
 <header class="masthead" style="background-image:None ;">
     <div class="container h-100 mt-4">
-        <div class="row h-100 align-items-center justify-content-center text-center">
-            <div class="col-lg-12 align-self-baseline">
-                <h2 class="text-red-75 font-weight-light mb-5" id="title-list-practices" >
-                    Vue détaillée
+        <div class="row mt-3 align-items-center justify-content-center ">
+            <div class="col-sm-12  align-self-baseline">
+                <h2 class="text-red-75 font-weight-light mb-2 text-center" id="title-list-practices">
+                    {{object.title}}
                 </h2>
             </div>
-            <div class="col-lg-12 align-self-baseline">
-                
-                    <p class="text-red-75"> {{object.title}} </p>
-                    <img src="{{object.photo1.url}}">
-                    <img src="{{object.photo2.url}}">
-                    <img src="{{object.photo3.url}}">
+            <div class="col-sm-12 align-self-baseline div-description">
+                <h2 class="text-red-75">Description</h2>
+                <p>{{object.description | safe }}</p>
+                <h2 class="text-red-75">Materiel</h2>
+                <p>{{object.material}}</p>
             </div>
-
         </div>
     </div>
 </header>
