--- a/training/templates/training/practice_detail.html
+++ b/training/templates/training/practice_detail.html
@@ -13,10 +13,11 @@
                 </h2>
             </div>
             <div class="col-sm-12 align-self-baseline div-description">
-                <h2 class="text-red-75">Description</h2>
+                <h3 class="text-red-75">Categorie</h3>
+                <p>{{object.category}}</p>
+                <h3 class="text-red-75">Description</h3>
                 <p>{{object.description | safe }}</p>
-                <h2 class="text-red-75">Materiel</h2>
-                <p>{{object.material}}</p>
+                
             </div>
         </div>
     </div>
