Fixing ckeditor sizing

--- a/training/templates/training/practice_detail.html
+++ b/training/templates/training/practice_detail.html
@@ -7,15 +7,15 @@
 <header class="masthead" style="background-image:None ;">
     <div class="container h-100 mt-4">
         <div class="row mt-3 align-items-center justify-content-center ">
-            <div class="col-sm-12  align-self-baseline">
+            <div class="col-sm-12 pt-1 align-self-baseline">
                 <h2 class="text-red-75 font-weight-light mb-2 text-center" id="title-list-practices">
                     {{object.title}}
                 </h2>
             </div>
             <div class="col-sm-12 align-self-baseline div-description">
-                <h2 class="text-red-75">Description</h2>
+                <h3 class="text-red-75">Description</h3>
                 <p>{{object.description | safe }}</p>
-                <h2 class="text-red-75">Materiel</h2>
+                <h3 class="text-red-75">Materiel</h3>
                 <p>{{object.material}}</p>
             </div>
         </div>
