--- a/training/templates/training/practice_list.html
+++ b/training/templates/training/practice_list.html
@@ -7,15 +7,20 @@
 <header class="masthead" style="background-image:None ;">
     <div class="container h-100 mt-4">
         <div class="row h-100 align-items-center justify-content-center text-center">
-            <div class="col-lg-12 align-self-baseline">
+            <div class="col-lg-12 pt-1 align-self-baseline">
                 <h2 class="text-red-75 font-weight-light mb-5" id="title-list-practices" >
                     Liste d'exercices
                 </h2>
             </div>
             <div class="col-lg-12 align-self-baseline">
-                {% for practice in practices %}
-                    <a class="text-red-75" href="{% url 'practice-details' practice.id %}"> {{practice.title}} </a>
-                {% endfor %}
+                <ul>
+                    {% for practice in practices %}
+                        <li><a class="text-red-75" href="{% url 'practice-details' practice.id %}"> {{practice.title}} </a></li>
+                    {% empty %}
+                        <li>Aucun exercice à proposer</li>
+                    {% endfor %}
+                </ul>
+                
             </div>
 
         </div>
