--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
     <!-- Core theme JS-->
     <script src="{% static 'dist/js/scripts.js' %}"></script>
+    <script src="{% static 'dist/js/cart.js' %}"></script>
 </body>
 
 </html>
